# ferp

./: .gitignore  .gitmessage  .gitmodules  LICENSE  Makefile  README.md  SCRIPT_AUTHORS.md  ferp.spec  pyproject.toml
.github/workflows/: build-bundles.yml  publish.yml  release-scripts-assets.yml
ferp/: __main__.py  app.py  cli.py
ferp/config/: config.json  settings.json
ferp/core/: app.py  bundle_installer.py  command_provider.py  config.py  dependency_manager.py  errors.py  fs_controller.py  fs_watcher.py  logging.py  messages.py  notify.py  path_actions.py  path_navigation.py  paths.py  protocols.py  script_controller.py  script_protocol.py  script_runner.py  settings.py  settings_model.py  settings_store.py  state.py  task_store.py  transcript_logger.py  worker_groups.py  worker_registry.py
ferp/data/: articles.py
ferp/domain/: scripts.py
ferp/fscp/host/: __init__.py  host.py  managed_process.py  process_registry.py
ferp/fscp/protocol/: __init__.py  errors.py  messages.py  state.py  validator.py
ferp/fscp/protocol/schemas/fscp/1.0/: cancel.json  definitions.json  discriminator.json  envelope.json  exit.json  init.json  input_response.json  log.json  message.json  progress.json  request_input.json  result.json
ferp/fscp/scripts/: sdk.py
ferp/fscp/scripts/common/: __init__.py  files.py  metadata.py  settings.py
ferp/fscp/scripts/runtime/: __init__.py  __main__.py  errors.py  io.py  script.py  state.py  worker.py
ferp/fscp/transcript/: __init__.py  events.py
ferp/resources/: USERS_GUIDE.md  articles.py  ferp-xmp-1.0.md  key_help.json
ferp/services/: __init__.py  archive_ops.py  drive_inventory.py  file_info.py  file_listing.py  monday_sync.py  releases.py  scripts.py  terminal_runner.py  update_check.py
ferp/services/monday/: __init__.py  client.py  definitions.py  generic.py  sync_gftv.py
ferp/styles/: index.tcss
ferp/themes/: themes.py
ferp/widgets/: __init__.py  archive_dialogs.py  dialogs.py  file_tree.py  forms.py  key_help.py  metadata_panel.py  navigation_sidebar.py  output_panel.py  panels.py  path_navigator.py  process_list.py  process_panel.py  readme_modal.py  scripts.py  task_capture.py  task_list.py  task_status.py  terminal.py  top_bar.py
scripts/: bump_version.py  release_scripts.py
