[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ferp"
description = "Terminal-first file manager and FSCP automation workbench built with Textual."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Brandon Johnson" }]
classifiers = [
  "Environment :: Console",
  "Framework :: Textual",
  "License :: OSI Approved :: MIT License",
  "Topic :: System :: Shells",
  "Topic :: Utilities",
]
dependencies = [
  "jsonschema>=4.21",
  "watchdog>=4.0",
  "extract-msg>=0.55.0",
  "PyPDF2>=3.0",
  "pdfplumber>=0.11.8",
  "openpyxl>=3.1",
  "googletrans==4.0.2",
  "Unidecode>=1.3.8",
  "textual>=7.3.0",
  "platformdirs>=4.2",
  "requests>=2.32",
  "pywin32>=306; platform_system == \"Windows\"",
]
dynamic = ["version"]

[project.scripts]
ferp = "ferp.cli:main"
ferp-ui = "ferp.app:main"

[project.urls]
Homepage = "https://github.com/zappbrandigan/ferp"
Documentation = "https://github.com/zappbrandigan/ferp#readme"
Issues = "https://github.com/zappbrandigan/ferp/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[tool.setuptools.dynamic]
version = { attr = "ferp.__version__.__version__" }

[tool.setuptools.package-data]
"ferp" = ["styles/*.tcss", "fscp/protocol/schemas/**/*.json"]
