[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ferp"
description = "Terminal-first file navigator and FSCP automation workbench built with Textual."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Brandon Johnson" }]
classifiers = [
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Topic :: System :: Shells",
  "Topic :: Utilities",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "jsonschema>=4.21",
  "watchdog>=4.0",
  "textual>=8.0.0",
  "platformdirs>=4.2",
  "requests>=2.32",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.13.1",
  "psutil>=7.2.2",
  "py7zr>=1.1.0"
]
dynamic = ["version"]

[project.scripts]
ferp = "ferp.cli:main"

[project.urls]
Homepage = "https://github.com/zappbrandigan/ferp"
Documentation = "https://github.com/zappbrandigan/ferp#readme"
Issues = "https://github.com/zappbrandigan/ferp/issues"

[project.optional-dependencies]
dev = [
  "pypdf>=6.6",
  "extract-msg>=0.55.0",
  "openpyxl>=3.1",
  "googletrans==4.0.2",
  "Unidecode>=1.3.8",
  "pywin32>=306; platform_system == \"Windows\"",
  "pdfplumber>=0.11.8",
  "reportlab>=4.4.9",
  "pytest>=8.2",
  "pytest-cov>=7.0.0",
  "textual-dev>=1.8.0",
]

[tool.coverage.run]
omit = [
  "ferp/scripts/*",
]

[tool.setuptools.dynamic]
version = { attr = "ferp.__version__.__version__" }

[tool.setuptools.package-data]
ferp = ["styles/*.tcss", "fscp/protocol/schemas/**/*.json", "resources/USERS_GUIDE.md"]
